@@ -2,15 +2,18 @@ package org.example.socialmediaspring.service.impl;
 
 import org.example.socialmediaspring.common.PageResponse;
 import org.example.socialmediaspring.constant.ErrorCodeConst;
+import org.example.socialmediaspring.dto.auth.ChangePasswordRequest;
 import org.example.socialmediaspring.dto.book.BookCategoryDto;
 import org.example.socialmediaspring.dto.common.IdsRequest;
 import org.example.socialmediaspring.dto.common.LongIdsRequest;
+import org.example.socialmediaspring.dto.common.ReqRes;
 import org.example.socialmediaspring.dto.user.UserRequest;
 import org.example.socialmediaspring.dto.user.UserResponse;
 import org.example.socialmediaspring.entity.Role;
 import org.example.socialmediaspring.entity.User;
 import org.example.socialmediaspring.exception.BizException;
 import org.example.socialmediaspring.mapper.UserMapper;
+import org.example.socialmediaspring.repository.TokenRepository;
 import org.example.socialmediaspring.repository.UserRepository;
 import org.example.socialmediaspring.service.UserService;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -18,11 +21,16 @@ import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Pageable;
 import org.springframework.data.domain.Sort;
+import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
+import org.springframework.security.core.context.SecurityContextHolder;
+import org.springframework.security.core.userdetails.UserDetails;
 import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
+import java.security.Principal;
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 public class UserServiceImpl implements UserService {
@@ -34,6 +42,8 @@ public class UserServiceImpl implements UserService {
 
     @Autowired
     PasswordEncoder passwordEncoder;
+    @Autowired
+    private TokenRepository tokenRepository;
 
     @Override
     public UserResponse createUser(UserRequest request) {
@@ -49,7 +59,7 @@ public class UserServiceImpl implements UserService {
                 .email(request.getEmail())
                 .userName(request.getEmail())
                 .phone(request.getPhone())
-                .password(passwordEncoder.encode(request.getPassword()))
+                .password(passwordEncoder.encode("123456"))
                 .role(Role.USER)
                 .build();
 
@@ -89,6 +99,7 @@ public class UserServiceImpl implements UserService {
     @Override
     @Transactional
     public String deleteUsersByIds(LongIdsRequest ids) {
+        tokenRepository.deleteByUserId(ids.getIds());
         userRepository.deleteAllById(ids.getIds());
 
         StringBuilder message = new StringBuilder();
@@ -110,10 +121,15 @@ public class UserServiceImpl implements UserService {
     public PageResponse<UserResponse> findUsers(int page, int size) {
         Pageable pageable = PageRequest.of(page, size, Sort.by("created").descending());
 
+        UserDetails currentUser = (UserDetails) SecurityContextHolder.getContext().getAuthentication().getPrincipal();
+
+        String currentUsername = currentUser.getUsername();
+
         Page<UserResponse> users = userRepository.findUsersByConds(pageable);
 
         System.out.println("Result users: {}" + users);
-        List<UserResponse> userResponse = users.stream().toList();
+        List<UserResponse> userResponse = users.stream().filter(user -> !user.getUserName().equals(currentUsername))
+                .collect(Collectors.toList());
         return new PageResponse<>(
                 userResponse,
                 users.getNumber(),
@@ -125,4 +141,31 @@ public class UserServiceImpl implements UserService {
         );
     }
 
+    @Override
+    public String changePassword(ChangePasswordRequest request, Principal connectedUser) {
+        UserDetails currentUser = (UserDetails) SecurityContextHolder.getContext().getAuthentication().getPrincipal();
+
+        // check if the current password is correct
+        if (!passwordEncoder.matches(request.getCurPass(), currentUser.getPassword())) {
+            throw new BizException(ErrorCodeConst.INVALID_INPUT, "Wrong password");
+        }
+        // check if the two new passwords are the same
+        if (!request.getNewPass().equals(currentUser.getPassword())) {
+            throw new BizException(ErrorCodeConst.INVALID_INPUT, "Password no change");
+        }
+
+        // check if the two new passwords are the same
+        if (!request.getNewPass().equals(request.getConfirmPass())) {
+            throw new BizException(ErrorCodeConst.INVALID_INPUT, "Password are not the same");
+        }
+
+        User user = userRepository.findUsersByUsername(currentUser.getUsername());
+        // update the password
+        user.setPassword(passwordEncoder.encode(request.getNewPass()));
+
+        // save the new password
+         userRepository.save(user);
+
+        return "Change password successful!";
+    }
 }
